[gd_scene load_steps=13 format=2]

[ext_resource path="res://pckScenes/dummies/dummy1/Drone.gd" type="Script" id=1]
[ext_resource path="res://pckScenes/dummies/dummy1/dummy1.png" type="Texture" id=2]
[ext_resource path="res://assets/misc/light/light.png" type="Texture" id=3]
[ext_resource path="res://pckScenes/fx/FDmanager.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 150.0

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 22, 13 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 44, 36 )

[node name="Drone" type="KinematicBody2D" groups=[
"enemy",
]]
script = ExtResource( 1 )

[node name="Detection" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Detection"]
shape = SubResource( 1 )

[node name="Texture" type="AnimatedSprite" parent="."]
scale = Vector2( 1.5, 1.5 )
frames = SubResource( 6 )
playing = true

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="light" type="Light2D" parent="."]
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )
color = Color( 0.172549, 1, 0, 1 )
energy = 0.6
shadow_enabled = true
__meta__ = {
"_edit_lock_": true
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="light"]
position = Vector2( -3.8147e-06, 0 )
scale = Vector2( 7.33333, 4.33333 )

[node name="Area2D" type="Area2D" parent="."]

[node name="Shape2" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 2, 0 )
shape = SubResource( 8 )

[node name="Area2D2" type="Area2D" parent="."]

[node name="Shape2" type="CollisionShape2D" parent="Area2D2"]
position = Vector2( 2, 0 )
shape = SubResource( 8 )

[node name="FDmanager" parent="." instance=ExtResource( 4 )]

[connection signal="body_entered" from="Detection" to="." method="_on_Detection_body_entered"]
[connection signal="body_exited" from="Detection" to="." method="_on_Detection_body_exited"]
[connection signal="screen_entered" from="light/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="light/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="Area2D2" to="." method="_on_Area2D2_body_entered"]
[connection signal="body_exited" from="Area2D2" to="." method="_on_Area2D2_body_exited"]
